Fixed a portability bug in esl_buffer that was causing unit test failure on linux/gcc platform:
- the correct test for POSIX functionality is to test _POSIX_VERSION, not
  _POSIX_SOURCE. Changed a couple of errant uses of _POSIX_SOURCE.

- _POSIX_SOURCE is a "feature test macro". If defined by an
  application's source code, to 200112L for example, the compilation
  environment enables that POSIX version, and *disables* any
  functionality that's not in that POSIX version. Though it looked
  tempting (to force portable code development), it turns out Easel
  can't define this.  esl_threads.c::esl_threads_CPUCount() is an
  example of Easel trying to use one of several different
  system-dependent alternatives to do something that is not possible
  in vanilla POSIX. Added a "Portability Notes" section to
  perfect_module.tex (to eventually replace codestyle.tex) and made a
  note about this.

- the MAP_FILE option to mmap() is not standard POSIX; removed it.

- need #include <strings.h> for strcasecmp(), sayeth POSIX

- minor tweaks in "make clean"'s, making them clean more (gcov files).

- fixed a void return compile warning in EPN's esl-ssdraw utility.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@667 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/perfect_module.tex
+++ b/documentation/perfect_module.tex
@@ -1519,3 +1519,42 @@ can be active at a time.
 \section{The .tex file}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Portability notes
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+Easel is intended to be widely portable. We adhere to the ANSI C99
+standard. Any dependency on higher-level functionality (including
+POSIX, X/Open, or system-specific stuff) is optional, and Easel is
+capable of working around its absence at compile-time.
+
+Although we do not currently include Windows machines in our
+development environment, we are planning for the day when we do. Easel
+should not include any required UNIX-specific code that wouldn't port
+to Windows.\footnote{Though it probably does, which we'll discover
+  when we first try to compile for Windows.}
+
+
+% xref J7/83.
+\paragraph{Why not define \ccode{\_POSIX\_C\_SOURCE}?} You might think
+it would be a good idea to define \ccode{\_POSIX\_C\_SOURCE} to
+\ccode{200112L} or some such, to try to enforce the portability of our
+POSIX-dependent code. This doesn't work; don't do it.  According to
+the standards, if you define \ccode{\_POSIX\_C\_SOURCE}, the host must
+\emph{disable} anything that's \emph{not} in the POSIX
+standard. However, Easel \emph{is} allowed to optionally use
+system-dependent non-POSIX code. A good example is
+\ccode{esl\_threads.c::esl\_threads\_CPUCount()}. There is no
+POSIX-compliant way to check for the number of available processors on
+a system.\footnote{Apparently the POSIX threads standards committee
+  intends it that way; see
+  \url{http://ansi.c.sources.free.fr/threads/butenhof.txt}.} 
+Easel's implementation tries to find one of several system-specific
+alternatives, including the non-POSIX function \ccode{sysctl{}}. 
+
+
+
+
