Easel documentation book compiles again. Chapter on esl_buffer added, though incomplete. Code style chapter improved, though incomplete.
Started using "ctags -x" to list all functions in the API, in addition
to cscope and etags that I was already using for static code analysis
and navigation; another aid to systematically checking and getting
Easel API into a consistent state.
[J7/85-86]


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@669 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -111,25 +111,25 @@
 \input{autotext/esl_msaweight_functions}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Pairwise sequence alignment}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{quote}
- \emph{And how will it ever end?\\ 
-       unless the day finally arrives\\
-       when we have compared everything in the world\\
-       to everything else in the world,\\
-       and there is nothing left to do\\
-       but quietly close our notebooks\\
-       and sit with our hands folded on our desks.}\\
-\hspace*{1em}\hfill -- Billy Collins, \emph{The Trouble with Poetry}
-\end{quote}
+%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% \chapter{Pairwise sequence alignment}
+%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% \begin{quote}
+%%  \emph{And how will it ever end?\\ 
+%%        unless the day finally arrives\\
+%%        when we have compared everything in the world\\
+%%        to everything else in the world,\\
+%%        and there is nothing left to do\\
+%%        but quietly close our notebooks\\
+%%        and sit with our hands folded on our desks.}\\
+%% \hspace*{1em}\hfill -- Billy Collins, \emph{The Trouble with Poetry}
+%% \end{quote}
 
-\newpage
-\section{\eslmod{swat}: Smith/Waterman local alignment}
-\input{../esl_swat}
-\subsection{Functions in the swat module}
-\input{autotext/esl_swat_functions}
+%% \newpage
+%% \section{\eslmod{swat}: Smith/Waterman local alignment}
+%% \input{../esl_swat}
+%% \subsection{Functions in the swat module}
+%% \input{autotext/esl_swat_functions}
 
 
 
@@ -309,6 +309,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Utility modules}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\chapter{Core modules}
+
+\newpage
+\section{\eslmod{buffer}: reading from any sort of input}
+\input{../esl_buffer}
+\subsection{Functions in the buffer module}
+\input{autotext/esl_buffer_functions}
 
 \newpage
 \section{\eslmod{cluster}: single linkage clustering}
