--- a/documentation/codestyle.tex
+++ b/documentation/codestyle.tex
@@ -832,7 +832,7 @@ special names are called \esldef{common interfaces}.
   & [standard]
   & \ccode{esl\_keyhash\_Reuse()} \\
 
-\ccode{\_Sizeof}
+\ccode{size_t \_Sizeof}
   & Return the allocation size of an object
   & size, in bytes
   & - \\
@@ -1149,7 +1149,7 @@ For example:
 %%%%
 \begin{sreapi}
 \hypertarget{ifc:Sizeof}
-{\item[\_Sizeof(obj)]}
+{\item[size_t \_Sizeof(obj)]}
 
 Returns the total size of an object and its allocations, in bytes.
 \end{sreapi}
