--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -42,7 +42,7 @@
 \emph{Lack of skill dictates economy of style.} 
 \hspace*{1em}\hfill -- Joey Ramone
 \end{quote}     
-\input{../easel}
+\input{easel}
 \section{Functions in the easel module}
 \input{autotext/easel_functions}
 \vspace*{\fill}
@@ -54,37 +54,37 @@
 
 \newpage
 \section{\eslmod{sq}: single biological sequences}
-\input{../esl_sq}
+\input{esl_sq}
 \subsection{Functions in the sq module}
 \input{autotext/esl_sq_functions}
 
 \newpage
 \section{\eslmod{msa}: Multiple sequence alignments and i/o}
-\input{../esl_msa}
+\input{esl_msa}
 \subsection{Functions in the msa module}
 \input{autotext/esl_msa_functions}
 
 \newpage
 \section{\eslmod{alphabet}: digitized biosequences}
-\input{../esl_alphabet}
+\input{esl_alphabet}
 \subsection{Functions in the alphabet module}
 \input{autotext/esl_alphabet_functions}
 
 \newpage
 \section{\eslmod{randomseq}: sampling random sequences}
-\input{../esl_randomseq}
+\input{esl_randomseq}
 \subsection{Functions in the randomseq module}
 \input{autotext/esl_randomseq_functions}
 
 \newpage
 \section{\eslmod{sqio}: i/o of unaligned sequence files}
-\input{../esl_sqio}
+\input{esl_sqio}
 \subsection{Functions in the sqio module}
 \input{autotext/esl_sqio_functions}
 
 \newpage
 \section{\eslmod{ssi}: indexing flatfiles for record retrieval}
-\input{../esl_ssi}
+\input{esl_ssi}
 \subsection{Functions in the ssi module}
 \input{autotext/esl_ssi_functions}
 
@@ -95,7 +95,7 @@
 
 \newpage
 \section{\eslmod{msacluster}: Clustering aligned sequence families}
-\input{../esl_msacluster}
+\input{esl_msacluster}
 \subsection{Functions in the msacluster module}
 \input{autotext/esl_msacluster_functions}
 
@@ -106,7 +106,7 @@
  newspaper to assure himself that what is said is true.}\\
 \hspace*{1em}\hfill -- Ludwig Wittgenstein \citep[cited in]{Altschul89}
 \end{quote}
-\input{../esl_msaweight}
+\input{esl_msaweight}
 \subsection{Functions in the msaweight module}
 \input{autotext/esl_msaweight_functions}
 
@@ -127,7 +127,7 @@
 
 %% \newpage
 %% \section{\eslmod{swat}: Smith/Waterman local alignment}
-%% \input{../esl_swat}
+%% \input{esl_swat}
 %% \subsection{Functions in the swat module}
 %% \input{autotext/esl_swat_functions}
 
@@ -144,19 +144,19 @@
 
 \newpage
 \section{\eslmod{scorematrix}: Pairwise alignment scores}
-\input{../esl_scorematrix}
+\input{esl_scorematrix}
 \subsection{Functions in the scorematrix module}
 \input{autotext/esl_scorematrix_functions}
 
 \newpage
 \section{\eslmod{ratematrix}: Continuous-time Markov models of evolution}
-\input{../esl_ratematrix}
+\input{esl_ratematrix}
 \subsection{Functions in the ratematrix module}
 \input{autotext/esl_ratematrix_functions}
 
 \newpage
 \section{\eslmod{paml}: Reading data files from PAML}
-\input{../esl_paml}
+\input{esl_paml}
 \subsection{Functions in the paml module}
 \input{autotext/esl_paml_functions}
 
@@ -167,7 +167,7 @@
 
 \newpage
 \section{\eslmod{wuss}: RNA secondary structure annotation}
-\input{../esl_wuss}
+\input{esl_wuss}
 \subsection{Functions in the wuss module}
 \input{autotext/esl_wuss_functions}
 
@@ -178,25 +178,25 @@
 
 \newpage
 \section{\eslmod{vectorops}: Vector operations}
-\input{../esl_vectorops}
+\input{esl_vectorops}
 \subsection{Functions in the vectorops module}
 \input{autotext/esl_vectorops_functions}
 
 \newpage
 \section{\eslmod{dmatrix}: 2D matrices and linear algebra}
-\input{../esl_dmatrix}
+\input{esl_dmatrix}
 \subsection{Functions in the dmatrix module}
 \input{autotext/esl_dmatrix_functions}
 
 \newpage
 \section{\eslmod{minimizer}: Conjugate gradient descent}
-\input{../esl_minimizer}
+\input{esl_minimizer}
 \subsection{Functions in the minimizer module}
 \input{autotext/esl_minimizer_functions}
 
 \newpage
 \section{\eslmod{rootfinder}: One-dimensional rootfinding}
-\input{../esl_rootfinder}
+\input{esl_rootfinder}
 \subsection{Functions in the rootfinder module}
 \input{autotext/esl_rootfinder_functions}
 
@@ -206,13 +206,13 @@
 
 \newpage
 \section{\eslmod{tree}: Phylogenetic trees}
-\input{../esl_tree}
+\input{esl_tree}
 \subsection{Functions in the tree module}
 \input{autotext/esl_tree_functions}
 
 \newpage
 \section{\eslmod{distance}: Distance calculations}
-\input{../esl_distance}
+\input{esl_distance}
 \subsection{Functions in the distance module}
 \input{autotext/esl_distance_functions}
 
@@ -229,79 +229,79 @@
 
 \newpage
 \section{\eslmod{stats}: Basic statistics routines}
-\input{../esl_stats}
+\input{esl_stats}
 \subsection{Functions in the stats module}
 \input{autotext/esl_stats_functions}
 
 \newpage
 \section{\eslmod{histogram}: Collecting histograms}
-\input{../esl_histogram}
+\input{esl_histogram}
 \subsection{Functions in the histogram module}
 \input{autotext/esl_histogram_functions}
 
 \newpage
 \section{\eslmod{dirichlet}: Beta, Gamma, Dirichlet densities and priors}
-\input{../esl_dirichlet}
+\input{esl_dirichlet}
 \subsection{Functions in the dirichlet module}
 \input{autotext/esl_dirichlet_functions}
 
 \newpage
 \section{\eslmod{exponential}: Exponential distributions}
-\input{../esl_exponential}
+\input{esl_exponential}
 \subsection{Functions in the exponential module}
 \input{autotext/esl_exponential_functions}
 
 \newpage
 \section{\eslmod{gamma}: Gamma distributions}
-\input{../esl_gamma}
+\input{esl_gamma}
 \subsection{Functions in the gamma module}
 \input{autotext/esl_gamma_functions}
 
 \newpage
 \section{\eslmod{gev}: Generalized extreme value distributions}
-\input{../esl_gev}
+\input{esl_gev}
 \subsection{Functions in the gev module}
 \input{autotext/esl_gev_functions}
 
 \newpage
 \section{\eslmod{gumbel}: Type I extreme value (Gumbel) statistics}
-\input{../esl_gumbel}
+\input{esl_gumbel}
 \subsection{Functions in the gumbel module}
 \input{autotext/esl_gumbel_functions}
 
 \newpage
 \section{\eslmod{hyperexp}: Hyperexponential distributions}
-\input{../esl_hyperexp}
+\input{esl_hyperexp}
 \subsection{Functions in the hyperexp module}
 \input{autotext/esl_hyperexp_functions}
 
 \newpage
 \section{\eslmod{mixdchlet}: Mixture Dirichlet distributions}
-%\input{../esl_mixdchlet}
+%\input{esl_mixdchlet}
 \subsection{Functions in the mixdchlet module}
 %\input{autotext/esl_mixdchlet_functions}
 
 \newpage
 \section{\eslmod{mixgev}: Mixture generalized extreme value distributions}
-%\input{../esl_mixgev}
+%\input{esl_mixgev}
 \subsection{Functions in the mixgev module}
 \input{autotext/esl_mixgev_functions}
 
 \newpage
 \section{\eslmod{normal}: Normal (Gaussian) distributions}
-\input{../esl_normal}
+\input{esl_normal}
 \subsection{Functions in the normal module}
 \input{autotext/esl_normal_functions}
 
 \newpage
 \section{\eslmod{stretchexp}: Stretched exponential distributions}
-\input{../esl_stretchexp}
+\input{esl_stretchexp}
 \subsection{Functions in the stretchexp module}
 \input{autotext/esl_stretchexp_functions}
 
 \newpage
 \section{\eslmod{weibull}: Weibull distributions}
-\input{../esl_weibull}
+\input{esl_weibull}
 \subsection{Functions in the weibull module}
 \input{autotext/esl_weibull_functions}
 
@@ -312,31 +312,31 @@
 
 \newpage
 \section{\eslmod{buffer}: reading from any sort of input}
-\input{../esl_buffer}
+\input{esl_buffer}
 \subsection{Functions in the buffer module}
 \input{autotext/esl_buffer_functions}
 
 \newpage
 \section{\eslmod{cluster}: single linkage clustering}
-\input{../esl_cluster}
+\input{esl_cluster}
 \subsection{Functions in the cluster module}
 \input{autotext/esl_cluster_functions}
 
 \newpage
 \section{\eslmod{fileparser}: token-based data file input}
-\input{../esl_fileparser}
+\input{esl_fileparser}
 \subsection{Functions in the fileparser module}
 \input{autotext/esl_fileparser_functions}
 
 \newpage
 \section{\eslmod{getopts}: command line parsing}
-\input{../esl_getopts}
+\input{esl_getopts}
 \subsection{Functions in the getopts module}
 \input{autotext/esl_getopts_functions}
 
 \newpage
 \section{\eslmod{keyhash}: associative hashes}
-\input{../esl_keyhash}
+\input{esl_keyhash}
 \subsection{Functions in the keyhash module}
 \input{autotext/esl_keyhash_functions}
 
@@ -346,26 +346,26 @@
 \emph{Nec Babylonios temptaris numeros.} \hspace{3em} -- Horace, Ode
 1.11. \\ 
 \end{quote}     
-\input{../esl_random}
+\input{esl_random}
 \subsection{Functions in the random (rnd) module}
 \input{autotext/esl_random_functions}
 \vspace*{\fill}
 
 \newpage
 \section{\eslmod{regexp}: regular expression matching}
-\input{../esl_regexp}
+\input{esl_regexp}
 \subsection{Functions in the regexp module}
 \input{autotext/esl_regexp_functions}
 
 \newpage
 \section{\eslmod{stack}: pushdown stacks for integers, chars, and pointers}
-\input{../esl_stack}
+\input{esl_stack}
 \subsection{Functions in the stack module}
 \input{autotext/esl_stack_functions}
 
 \newpage
 \section{\eslmod{stopwatch}: timing parts of programs}
-\input{../esl_stopwatch}
+\input{esl_stopwatch}
 \subsection{Functions in the stopwatch module}
 \input{autotext/esl_stopwatch_functions}
 
@@ -378,14 +378,14 @@
 
 \newpage
 \section{\eslmod{sse}: SIMD minivectors on Intel and AMD }
-\input{../esl_sse}
+\input{esl_sse}
 \subsection{Functions in the sse module}
 \input{autotext/esl_sse_functions}
 
 
 \newpage
 \section{\eslmod{mpi}: MPI parallelization}
-\input{../esl_mpi}
+\input{esl_mpi}
 \subsection{Functions in the MPI module}
 \input{autotext/esl_mpi_functions}
 
