SELEX alignment file parsing rewritten. Stockholm parser rewrite in progress.
Added first draft of esl_msafile_stockholm.c, in an uncompilable state.

esl_key_Store() => esl_keyhash_Store(), esl_key_Lookup() =>
esl_keyhash_Lookup(), and args change to take <p>,<n> to be able to
handle raw memory.  To upgrade, changing the function name and passing
n=-1 is enough, for NUL-terminated strings.

Added eslENOALPHABET as an error code. esl_abc_GuessAlphabet() and
other alphabet guessers now return eslENOALPHABET instead of
eslEAMBIGUOUS.

Added esl_strmapcat_noalloc() and esl_abc_dsqcat_noalloc().

Added eslx_msafile_OpenMem(): open a string for parsing alignment
format. We'll use this in writing unit tests for alignment parsers.
Added eslx_msafile_OpenBuffer().

Added eslx_msafile_OpenFailure(): standardized stderr diagnostics of
all the various ways that opening an MSA file can fail.

Renamed eslx_msafile_ReadLine() => eslx_msafile_GetLine() for
consistency with esl_buffer.

In keyhash module, jenkins_hash() now takes <p>, <n> arguments.
Added esl_keyhash_CreateCustom().
Added esl_keyhash_Sizeof().

esl_memtok() behavior changed. Now it skips trailing delim characters,
not just leading ones, before it resets *p, *n. This simplifies
parsing calls when caller parses some whitespace-delimited tokens then
wants the rest of the line (including internal whitespace, but without
leading space). (But now esl_strtok() and esl_memtok() behave differently;
should change esl_strtok() someday.)

Added esl_memstrcpy().

Added benchmark driver in esl_mem.

Added esl_msafile_selex_CheckFileFormat(): checks whether input is in
SELEX alignment format.

Added esl_msafile_selex_Write().

Added esl_msa_StoreGRTag().

Moved SVN $Id$ and $URL$ tags from header down to copyright/license
stamp at end. This affects all .c/.h files.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@685 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_keyhash.tex
+++ b/esl_keyhash.tex
@@ -44,17 +44,18 @@ pseudocode:
        ESL_KEYHASH *kh = esl_keyhash_Create();
        int          idx;
        char        *key;
+       esl_pos_t    keylen;
        
        /* To store keys: */
        (foreach key) {
-          esl_key_Store(hash, key, &idx);       
+          esl_keyhash_Store(hash, key, keylen, &idx);       
           (reallocate foo, bar as needed)
           foo[idx] = whatever;
           bar[idx] = whatever;
        }     
        /* To look up keys: */
        (foreach key) {
-          if (esl_key_Lookup(hash, key, &idx) != eslOK) { no_such_key; }
+          if (esl_keyhash_Lookup(hash, key, keylen, &idx) != eslOK) { no_such_key; }
           (do something with) foo[idx];
           (do something with) bar[idx];
        }   
