Converted Easel to use new esl_msafile modules.
Old esl_msafile* interface goes away. All esl_msafile_*() functions
are gone.  

In general, esl_msafile*() and ESL_MSAFILE from old esl_msa.c are
replaced by esl_msafile*.[ch] modules, eslx_msafile*() calls, and
ESLX_MSAFILE in the new interface; details below. 

Additionally, for a special case of small memory Pfam i/o,
esl_msafile*() and ESL_MSAFILE are replaced by the esl_msafile2.[ch]
module, esl_msafile2*() calls, and ESL_MSAFILE2 object. The
esl_msafile2 module is added by this commit.

This completes Easel's full support for several formats: a2m, afa,
clustal (strict or not), phylip (interleaved and sequential),
psiblast, selex, and stockholm (multiblock or "pfam" one-block). Full
support means input via eslx_msafile_Read(), output via
eslx_msafile_Write(), format autodetection, and alphabet
autodetection.

The new modules use ESL_BUFFER, which confers rewindability and random
access for all input sources (including .gz pipes and stdin streams),
memory-mapping by mmap(), and the ability to open a variety of sources
(files, streams, ESL_BUFFERs, strings, and arbitrary memory).

The esl_msafile2 module, esl_msafile2.[ch], implements a ESL_MSAFILE2
object. This was needed to retain small-memory Pfam i/o functionality,
which is currently not supported by the new msafile modules. The
workaround is to move this functionality to its own module, out of
esl_msa module; identify it as deprecated/legacy; and add small memory
functionality to to-do lists.

This is step one of a two-step conversion. In step one, all functions
in the new interface are named eslx_msafile_*(). Global searches for
esl_msafile_*() will reveal all code that needs to be revised;
moreover, this code will no longer compile. We'll allow some time for
Easel-dependent codes (HMMER, Infernal, others) to adapt. Then in step
two, we'll restore esl_msafile_* names, converting the experimental
eslx_msafile_* interface to esl_msafile_*(). 
 
In more detail:


--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -81,7 +81,7 @@ accelerating indexing of some internal data structures.
 Here's an example of opening an MSA file and reading one or more
 alignments from it:
 
-\input{cexcerpts/msa_example}
+%%\input{cexcerpts/msa_example}
 
 Some things about the use of the API in the example are worth noting:
 
@@ -258,7 +258,7 @@ alignment.}, and \ccode{esl\_msafile\_SetDigital()} to set an
 already-open \ccode{ESL\_MSAFILE} so that all subsequent alignments
 are read in digital mode. For example: 
 
-\input{cexcerpts/msa_example2}
+%%\input{cexcerpts/msa_example2}
 
 
 \subsection{Reading from stdin or gzip-compressed files}
